Se configuraron correctamnete los cors en jwt para poder recibir peticiones del dominio de front